# winappCli

./: .gitignore  README.md  SUPPORT.md  winapp.example.yaml
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  documentation.yml  feature_request.yml
.github/workflows/: build-package.yml  build.yml  test-report.yml
.pipelines/: Unstub.ps1  ci.yml  release.yml
.pipelines/templates/: build.yaml
docs/: README.md  cli-schema.json  electron-get-started.md  gui-usage.md  llm-context.md  telemetry.md  usage.md  using-with-llms.md
docs/guides/: cpp.md  dotnet.md  packaging-cli.md  rust.md  tauri.md
docs/guides/electron/: cpp-notification-addon.md  packaging.md  phi-silica-addon.md  setup.md  winml-addon.md
msix/: appxmanifest.xml
sample/: package-lock.json  package.json  winsdk.yaml
samples/cpp-app/: CMakeLists.txt  README.md  appxmanifest.xml  main.cpp
samples/dotnet-app/: Program.cs  README.md  appxmanifest.xml  dotnet-app.csproj
samples/electron/: .gitignore  Directory.packages.props  README.md  appxmanifest.xml  forge.config.js  package-lock.json  package.json  winapp.yaml
samples/electron-winml/: .gitignore  Directory.packages.props  README.md  appxmanifest.xml  forge.config.js  package-lock.json  package.json  winapp.yaml
samples/electron-winml/src/: index.css  index.html  index.js  preload.js  renderer.js
samples/electron-winml/winMlAddon/: README.md  addon.cs  chatClient.cs  winMlAddon.csproj
samples/rust-app/: .gitignore  Cargo.toml  README.md  appxmanifest.xml
samples/tauri-app/: .gitignore  appxmanifest.xml  package.json
samples/wpf-app/: MainWindow.xaml  MainWindow.xaml.cs  README.md  appxmanifest.xml  wpf-app.csproj
scripts/: build-cli.cmd  build-cli.ps1  generate-llm-docs.ps1  package-msix.ps1  package-npm.ps1  test-e2e-electron.ps1  validate-llm-docs.ps1
scripts/assets/: llm-context-footer.md
scripts/msix-assets/: README.md  install-msix.ps1  install.cmd
specs/: move-global-folder-spec.md
src/: cli.js  nuget-utils.js
src/winapp-CLI/: .editorconfig  Directory.Build.props  Directory.Packages.props  winapp.sln
src/winapp-VSC/: package-lock.json  package.json
src/winapp-npm/: .gitignore  .npmignore  .prettierignore  README.md  buildtools-utils.js  cli.js  cpp-addon-utils.js  cs-addon-utils.js  dependency-utils.js  eslint.config.mjs  index.js  msix-utils.js  package-lock.json  package.json  tsconfig.json  utils.js  winapp-cli-utils.js  winapp-path-utils.js
src/winapp-vcpkg/vcpkg_sample/: AppxManifest.xml  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
src/winsdk-CLI/: .editorconfig  winsdk.sln
src/winsdk-npm/: .gitignore  README.md  addon-utils.js  buildtools-utils.js  cli.js  config-utils.js  index.js  msix-utils.js  package-lock.json  package.json  setup-sdks.js  utils.js  winappsdk-metadata.js  winsdk-cli-utils.js
(+291 files in other folders)
